--- a/danie-website/src/App.css
+++ b/danie-website/src/App.css
@@ -14,6 +14,7 @@ html {
   height: 100px;
   border-radius: 100px;
   text-align: center;
+  background: #1B998B;
 }
 
 .bio {
@@ -22,6 +23,7 @@ grid-row: 1/5;
 border-radius: 50px;
 margin: 10pt;
 padding: 15pt;
+background: #1B998B;
 }
 
 .main {
